      proxy pointer that gets returned. (LP: #1078119)
    - Don't lock the session when clicking on the current user. (LP: #1024392)
    - Hide 'start screen saver' action, if it's locked down. (LP: #1066825)
    - Use the same icons in the greeter as in the user session (LP: #1049244)
    - Test upower_proxy for NULL before using it. (LP: #1061844)

  [ Sebastien Bacher ]
  * debian/control:
    - clean deprecated Build-Depends on gconf and dbusglib

 -- Sebastien Bacher <seb128@ubuntu.com>  Fri, 30 Nov 2012 11:11:49 +0100

indicator-session (12.10.4-0ubuntu1) quantal; urgency=low

  * New upstream release.

 -- Sebastien Bacher <seb128@ubuntu.com>  Wed, 03 Oct 2012 21:36:09 +0200

indicator-session (12.10.3-0ubuntu1) quantal; urgency=low

  * New upstream release.
    - 12.10.0 showed "Guest user" even when disabled in lightdm (LP: #1049902)
    - Provide a fallback if theme's missing the session menu icon (LP: #1029036)
    - Fix some strings that hadn't been marked for translation

 -- Ken VanDine <ken.vandine@canonical.com>  Wed, 19 Sep 2012 15:59:23 -0400

indicator-session (12.10.2-0ubuntu3) quantal; urgency=low

  * Cherry-pick upstream:
    - Make "Suspend" translatable

 -- Didier Roche <didrocks@ubuntu.com>  Thu, 13 Sep 2012 12:50:04 +0200

indicator-session (12.10.2-0ubuntu2) quantal; urgency=low

  * Change the menu to say 'Shut Down' instead of 'Switch Off' by default,
    since the latter is completely non-idiomatic in American English; and
    update the translations for commonwealth English in the package to
    preserve the preferred wording for en_GB.  LP: #1029036.

 -- Steve Langasek <steve.langasek@ubuntu.com>  Wed, 12 Sep 2012 11:50:03 -0700

indicator-session (12.10.2-0ubuntu1) quantal; urgency=low

  * New upstream release:
    - Add an 'Online Accounts' menuitem (lp: #1044464)
    - Add disposition highlighting to the indicator icon (lp: #1044015)
    - Remove the Restart button from the shutdown dialog (lp: #1027952)
