@@ -3,6 +3,9 @@ CLEANFILES =
 BUILT_SOURCES =
 check_PROGRAMS =
 
+localcheckdir = .
+localcheck_PROGRAMS =
+
 ###
 ###
 ###
@@ -29,8 +32,10 @@ gschemas.compiled: Makefile
 	$(AM_V_GEN) $(GLIB_COMPILE_SCHEMAS) --targetdir=. .
 
 
-TESTS += test-service
-check_PROGRAMS += test-service
+localcheck:
+	./test-service
+
+localcheck_PROGRAMS += test-service
 test_service_SOURCES = test-service.cc
 test_service_LDADD = \
 	$(TEST_SERVICE_LIBS) \
